Feat/add landing page (#6)
* add zod and react hook form, adding branch dev

* Feat/setup UI library (#2)

* add atomic design structure

* add reausable btns

* fix eslint problem

* add landing page

* add routes file

* edit lintstage

* fix logo size

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,12 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@layer base {
+.primary-gradient {
+  background: radial-gradient(
+    934px at 6% 39.5%,
+    rgb(255, 35, 90) 0.2%,
+    rgb(255, 35, 144) 54.8%,
+    rgb(250, 99, 160) 93.4%
+  );
 }
 
-@layer base {
+.primary-gradient:hover {
+  background: radial-gradient(
+    1200px at 10% 50%,
+    rgb(255, 35, 90) 0.2%,
+    rgb(255, 35, 144) 54.8%,
+    rgb(250, 99, 160) 93.4%
+  );
+  transform: scale(1.01);
+}
+
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.7) 0%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    url("../public/images/home.webp");
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  background-repeat: no-repeat;
 }
