--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #fcf7fa;
+}
+
 .primary-gradient {
   background: radial-gradient(
     934px at 6% 39.5%,
