--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -158,3 +158,13 @@ main {
     overflow: auto;
   }
 }
+
+.disableSelection {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: 0;
+}
